<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_import"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/import_new_token"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/settings"/>

    <item
        android:id="@+id/action_report_problem"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/report_problem"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/help"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>
