<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<ScrollView
	    android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="20dp"
				android:text="@string/manual_prompt"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		
			<EditText
			    android:id="@+id/token_entry"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="20dp"
			    android:layout_marginRight="20dp"
			    android:inputType="textUri|textMultiLine"
			    android:ems="10" >
		
			    <requestFocus />
			</EditText>
		
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="20dp"
		        android:text="@string/examples"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    
			<TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:id="@+id/manual_examples"
		        android:text="@string/manual_examples"
		        android:typeface="monospace"
		        android:scrollHorizontally="true"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		
			<TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:id="@+id/import_uri_examples"
		        android:text="@string/import_uri_examples"
		        android:typeface="monospace"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="20dp"
				android:text="@string/manual_help"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>
		
	</ScrollView>	
	
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/next_button"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
    
</LinearLayout>
